Pacienti fixes: footer not showing, timeline display issue in Firefox

--- a/public/stylesheets/public/defaultStyles.css
+++ b/public/stylesheets/public/defaultStyles.css
@@ -6307,10 +6307,10 @@ html body #publicHeaderWrapper #publicHeader {
 }
 html body #publicContentWrapper {
   position: absolute;
+  padding: 70px 0 0 0;
   left: 0;
   top: 0;
   width: 100%;
-  padding-top: 70px;
 }
 html body #publicContentWrapper #publicContent {
   width: 100%;
@@ -6531,6 +6531,7 @@ html body .rootView {
 .timelineContainer {
   width: 100%;
   height: 200px;
+  padding: 0;
   overflow: hidden;
   position: relative;
 }
